tests/success/allowJs/js/tests/success/allowJs/src/bar.js
"use strict";
exports.bar = 123;
exports.bar = "hello world";
