tests/error/fullOfErrors/bar.js
"use strict";
exports.bar = 123;
exports.bar = "hello";
exports.bar = "world";
